[ci] Fix sonar configuration
For now, we need to use java10 with sonar, until sonarjava 5.8.0
is released, which adds support for java11.
Apparantly sonar also loads the classfiles and can't yet load
java11 classes, leading to many errors
"Unsupported class file major version 55" while analyzing
the project.

Also update SONAR_TOKEN

See https://jira.sonarsource.com/browse/SONARJAVA-2877